Add link to index.html to bean page.

--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,7 @@ Quik <br>
 Eeny <br>
 Cousin Augustus <br>
 <a href="https://rysavys.me/~miranda/webbs.html">Mr. and Mrs. Webb</a> <br>
+<a href="beans.html">The Beans</a>
 </p>
 
 
