Listed Freddy the Pig series

--- a/Book Series.html
+++ b/Book Series.html
@@ -1,10 +1,35 @@
 <!DOCTYPE HTML>
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 <title> Freddy the Pig Series </title>
 </head>
 <body>
-<p></p>
-<p></p>
-<p></p>
+<p> Freddy Goes to Florida</p>
+<p>Freddy Goes to the North Pole</p>
+<p>Freddy the Detective</p>
+<p>The Story of Freginald</p>
+<p>The Clockwork Twin</p>
+<p>Freddy the Politician</p>
+<p>Freddy's Cousin Weedly</p>
+<p>Freddy and the Ignormus</p>
+<p>Freddy and the Perilous Adventure</p>
+<p>Freddy and the Bean Home News</p>
+<p>Freddy and Mr. Camphor</p>
+<p>Freddy and the Popinjay</p>
+<p>Freddy and the Pied Piper</p>
+<p>Freddy the Magician</p>
+<p>Freddy Goes Camping</p>
+<p>Freddy Play Football</p>
+<p>Freddy the Cowboy</p>
+<p>Freddy Rides Again</p>
+<p>Freddy the Pilot</p>
+<p>Freddy and the Space Ship</p>
+<p>The Collected Poems of Freddy the Pig</p>
+<p>Freddy and the Men from Mars</p>
+<p>Freddy and the Baseball Team from Mars</p>
+<p>Freddy and Simon the Dictator</p>
+<p>Freddy and the Flying Saucer</p>
+<p>Freddy and the Drago</p>
 </body> 
+</html>
