added bower and bootstrap to project

--- a/Index.html
+++ b/Index.html
@@ -1,26 +1,70 @@
-
 <!-- saved from url=(0028)https://rysavys.me/~miranda/ -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title> List of the Original Animal Adventurers </title>
+<html>
+
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <title> List of the Original Animal Adventurers </title>
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <!-- jQuery JavaScript library -->
+    <script defer src="bower_components/jquery/dist/jquery.min.js"></script>
+    <!-- Bootstrap JavaScript library -->
+    <script defer src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-<p>
-Freddy <br>
-Mrs. Wiggins <br>
-Charles <br>
-Henrietta <br>
-Robert <br>
-<a href="https://rysavys.me/~miranda/Hanks_Music.html"> Hank</a>  <br>
-Jinx <br>
-Alice <br>
-Emma <br>
-Eek <br>
-Quik <br>
-Eeny <br>
-Cousin Augustus <br>
-<a href="https://rysavys.me/~miranda/webbs.html">Mr. and Mrs. Webb</a> <br>
-<a href="beans.html">The Beans</a>
-</p>
+    <div class="container">
+        <h1 class="text-center">
+            Freddy the Pig Main Characters
+        </h1>
+        <div class="row">
+            <div class="col-md-4">
+                <ul>
+                    Humans:
+                    <li>
+                        <a href="beans.html">The Beans</a>
+                        <ul>
+                            <li> Mr. Bean </li>
+                            <li> Mrs. Bean </li>
+                        </ul>
+                    </li>
+                    <li> The Sheriff</li>
+                    <li> Mr. Camphor </li>
+                    <li> Bannister </li>
+                    <li> Uncle Ben </li>
+                </ul>
+            </div>
+            <div class="col-md-4">
+                <ul>
+                    Animals:
+                    <li>Mrs. Wiggins</li>
+                    <li>Charles</li>
+                    <li>Henrietta</li>
+                    <li>Robert</li>
+                    <li>
+                        <a href="https://rysavys.me/~miranda/Hanks_Music.html"> Hank</a>
+                    </li>
+                    <li>Alice</li>
+                    <li>Emma</li>
+                    <li>Eek</li>
+                    <li>Quik</li>
+                    <li>Eeny</li>
+                    <li>Cousin Agustus</li>
+                    <li>Cy</li>
+                    <li>
+                        <a href="https://rysavys.me/~miranda/webbs.html">Mr. and Mrs. Webb</a>
+                        <ul>
+                            <li>Mr. Webb</li>
+                            <li>Mrs. Webb</li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+            <div class="col-md-4"></div>
+
+        </div>
+    </div>
 
 
-</body></html>
+</body>
+
+</html>
