--- a/Book Series.html
+++ b/Book Series.html
@@ -1,35 +1,81 @@
 <!DOCTYPE HTML>
 <html>
+
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title> Freddy the Pig Series </title>
+    <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+    <title> Freddy the Pig Series </title>
+    <!-- Compressed CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/css/foundation.min.css" integrity="sha256-GSio8qamaXapM8Fq9JYdGNTvk/dgs+cMLgPeevOYEx0= sha384-wAweiGTn38CY2DSwAaEffed6iMeflc0FMiuptanbN4J+ib+342gKGpvYRWubPd/+ sha512-QHEb6jOC8SaGTmYmGU19u2FhIfeG+t/hSacIWPpDzOp5yygnthL3JwnilM7LM1dOAbJv62R+/FICfsrKUqv4Gg=="
+        crossorigin="anonymous">
+
+    <!-- Compressed JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.4.3/dist/js/foundation.min.js" integrity="sha256-mRYlCu5EG+ouD07WxLF8v4ZAZYCA6WrmdIXyn1Bv9Vk= sha384-KzKofw4qqetd3kvuQ5AdapWPqV1ZI+CnfyfEwZQgPk8poOLWaabfgJOfmW7uI+AV sha512-0gHfaMkY+Do568TgjJC2iMAV0dQlY4NqbeZ4pr9lVUTXQzKu8qceyd6wg/3Uql9qA2+3X5NHv3IMb05wb387rA=="
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-<p> Freddy Goes to Florida</p>
-<p>Freddy Goes to the North Pole</p>
-<p>Freddy the Detective</p>
-<p>The Story of Freginald</p>
-<p>The Clockwork Twin</p>
-<p>Freddy the Politician</p>
-<p>Freddy's Cousin Weedly</p>
-<p>Freddy and the Ignormus</p>
-<p>Freddy and the Perilous Adventure</p>
-<p>Freddy and the Bean Home News</p>
-<p>Freddy and Mr. Camphor</p>
-<p>Freddy and the Popinjay</p>
-<p>Freddy and the Pied Piper</p>
-<p>Freddy the Magician</p>
-<p>Freddy Goes Camping</p>
-<p>Freddy Play Football</p>
-<p>Freddy the Cowboy</p>
-<p>Freddy Rides Again</p>
-<p>Freddy the Pilot</p>
-<p>Freddy and the Space Ship</p>
-<p>The Collected Poems of Freddy the Pig</p>
-<p>Freddy and the Men from Mars</p>
-<p>Freddy and the Baseball Team from Mars</p>
-<p>Freddy and Simon the Dictator</p>
-<p>Freddy and the Flying Saucer</p>
-<p>Freddy and the Drago</p>
-</body> 
+    <h1 class="mytext">
+        List of Freddy the Pig Books
+    </h1>
+    <nav aria-label="Navigation" role="navigation">
+        <ul class="breadcrumbs">
+            <li>
+                <a href="Index.html">Home Page</a>
+            </li>
+            <li>
+                Book Series Page
+            </li>
+        </ul>
+    </nav>
+    <ul class="mytext">
+        <li>Freddy Goes to Florida
+            <ul>
+                <li>
+                    <i>Originally titled: To and Again</i>
+                </li>
+            </ul>
+            <li>Freddy Goes to the North Pole</li>
+            <ul>
+                <li>
+                    <i>Originally titled: More To and Again</i>
+                </li>
+            </ul>
+            <li>Freddy the Detective</li>
+            <li>The Story of Freginald</li>
+            <ul>
+                <li>
+                    <i>Reissued as Freddy and Freginald</i>
+                </li>
+            </ul>
+            <li>The Clockwork Twin</li>
+            <li>Freddy the Politician</li>
+            <ul>
+                <li>
+                    <i>Originally titled: Wiggins for President</i>
+                </li>
+            </ul>
+            <li>Freddy's Cousin Weedly</li>
+            <li>Freddy and the Ignormus</li>
+            <li>Freddy and the Perilous Adventure</li>
+            <li>Freddy and the Bean Home News</li>
+            <li>Freddy and Mr. Camphor</li>
+            <li>Freddy and the Popinjay</li>
+            <li>Freddy and the Pied Piper</li>
+            <li>Freddy the Magician</li>
+            <li>Freddy Goes Camping</li>
+            <li>Freddy Play Football</li>
+            <li>Freddy the Cowboy</li>
+            <li>Freddy Rides Again</li>
+            <li>Freddy the Pilot</li>
+            <li>Freddy and the Space Ship</li>
+            <li>The Collected Poems of Freddy the Pig</li>
+            <li>Freddy and the Men from Mars</li>
+            <li>Freddy and the Baseball Team from Mars</li>
+            <li>Freddy and Simon the Dictator</li>
+            <li>Freddy and the Flying Saucer</li>
+            <li>Freddy and the Dragon</li>
+    </ul>
+</body>
+
 </html>
